button hover working

--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
                     <div id = "myDescription">
                         <p>I am a CS Freshie expected to finish course in 2024. Currently a beginner coder on HackerRank, CodeForces and CodeChef doing Competitive Programming.</p>
                     </div>
-                    <div id = "downloadCV"><a href="/CV.pdf">Download CV</a></div>
+                    <a href="/CV.pdf">Download CV</a>
                 </div>
             </div>
         </div>
