--- a/homepage.html
+++ b/homepage.html
@@ -19,5 +19,8 @@
                 </div>
             </div>
         </div>
+        <div class="myImages">
+            <div class="image1"></div>
+        </div>
     </body>
 </html>
