removed trash files

--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
                 <h7>Hello, I'm</h7>
             </div>
             <div id = "rahulRanjan" class = "whitetext">
-                <p>Rahul Ranjan</p>
+                <img src="./resources/name.svg">
             </div>
             <div class = "circles"></div>
             <div class = "myBar">
