--- a/homepage.html
+++ b/homepage.html
@@ -47,22 +47,22 @@
             <div class="heading"><h1>Stuff I can work with</h1></div>
             <div class="skills-container">
                 <span class="front-end skills">Front End</span>
-                <span class="front-end skills">JavaScript</span>
-                <span class="front-end skills">HTML</span>
-                <span class="front-end skills">CSS</span>
-                <span class="front-end skills">SASS</span>
-                <span class="front-end skills">ReactJS </span>
+                <span class="front-end skills front-end--js">JavaScript</span>
+                <span class="front-end skills front-end--html">HTML</span>
+                <span class="front-end skills front-end--css">CSS</span>
+                <span class="front-end skills front-end--sass">SASS</span>
+                <span class="front-end skills front-end--reactjs">ReactJS </span>
                 <br>
                 <span class="back-end skills">Back End</span>
-                <span class="back-end skills">NodeJS</span>
-                <span class="back-end skills">MongoDB</span>
+                <span class="back-end skills back-end--nodejs">NodeJS</span>
+                <span class="back-end skills back-end--mongodb">MongoDB</span>
                 <br>
-                <span class="languages skills">C</span>
-                <span class="languages skills">C++</span>
-                <span class="languages skills">Python</span>
+                <span class="languages languages--c skills ">C</span>
+                <span class="languages languages--cpp skills">C++</span>
+                <span class="languages languages--python skills">Python</span>
                 <br>
-                <span class="extras-1 skills">Search Engine Optimization</span>
-                <span class="extras-2 skills">Scalable Vector Graphics</span>
+                <span class="extras-1 skills extras-1--seo">Search Engine Optimization</span>
+                <span class="extras-2 skills extras-2--svg">Scalable Vector Graphics</span>
             </div>
         </div>
     </div>
