Separated Stylesheet for Mobile devices

--- a/homepage.html
+++ b/homepage.html
@@ -15,10 +15,14 @@
             <div class="header__topbar">
                 <div class="header__topbar--brand">Rahul</div>
                 <a href="#" class="header__topbar--home">Home</a>
-                <a href="#" class="header__topbar--about">What I Do</a>
+                <a href="#my-skills" class="header__topbar--about">What I Do</a>
                 <a href="#" class="header__topbar--portfolio">Portfolio</a>
                 <a href="#" class="header__topbar--contact">Contact</a>
-                <div class="header__topbar--social">_ICONSHERE_</div>
+                <div class="header__topbar--social">
+                    <span>
+                        
+                    </span>
+                </div>
             </div>
     
             <div class="header__intro">
@@ -47,7 +51,7 @@
         </header>
 
         <div class="what-i-do-tag tags">What I Do</div>
-        <div class="my-skills">
+        <div class="my-skills" id="my-skills">
             <div class="heading"><h1>Stuff I can work with</h1></div>
             <div class="skills-container">
                 <span class="front-end skills">Front End</span>
@@ -60,11 +64,13 @@
                 <br>
                 <span class="back-end skills">Back End</span>
                 <span class="back-end skills back-end--nodejs">NodeJS</span>
+                <span class="back-end skills back-end--sql">SQL</span>
                 <span class="back-end skills back-end--mongodb">MongoDB</span>
                 <br>
                 <span class="languages languages--c skills ">C</span>
                 <span class="languages languages--cpp skills">C++</span>
                 <span class="languages languages--python skills">Python</span>
+                <span class="languages languages--kotlin skills">Kotlin</span>
                 <br>
                 <span class="extras-1 skills extras-1--seo">SEO</span>
                 <span class="extras-2 skills extras-2--svg">Vector Graphics</span>
