--- a/homepage.html
+++ b/homepage.html
@@ -15,12 +15,12 @@
             <div class="header__topbar">
                 <div class="header__topbar--brand">Rahul</div>
                 <a href="#" class="header__topbar--home">Home</a>
-                <a href="#my-skills" class="header__topbar--about">What I Do</a>
+                <a href="homepage.html#my-skills" class="header__topbar--about">What I Do</a>
                 <a href="#" class="header__topbar--portfolio">Portfolio</a>
                 <a href="#" class="header__topbar--contact">Contact</a>
                 <div class="header__topbar--social">
                     <span>
-                        
+                        _ICONS_HERE_
                     </span>
                 </div>
             </div>
@@ -41,8 +41,8 @@
                     <p>
                         I am a CS Freshie from NIT Durgapur, expected to finish course in 2024. Currently a beginner coder on HackerRank, CodeForces and CodeChef doing Competitive Programming.
                     </p>
-                    <button class="header__intro--button">Contact Me</button>
                 </div>
+                <button class="header__intro--button">Contact Me</button>
             </div>
 
             <div class="header__intro-bg"></div>
@@ -55,12 +55,13 @@
             <div class="heading"><h1>Stuff I can work with</h1></div>
             <div class="skills-container">
                 <span class="front-end skills">Front End</span>
-                <span class="front-end skills front-end--js">JavaScript</span>
                 <span class="front-end skills front-end--html">HTML</span>
                 <span class="front-end skills front-end--css">CSS</span>
                 <span class="front-end skills front-end--sass">SASS</span>
                 <span class="front-end skills front-end--reactjs">ReactJS</span>
+                <span class="front-end skills front-end--js">JavaScript</span>
                 <span class="front-end skills front-end--angular">Angular</span>
+                <span class="front-end skills front-end--js">TypeScript</span>
                 <br>
                 <span class="back-end skills">Back End</span>
                 <span class="back-end skills back-end--nodejs">NodeJS</span>
