Responsiveness optimized for Tablets and Mobile devices

--- a/homepage.html
+++ b/homepage.html
@@ -39,7 +39,7 @@
                 </span>
                 <div class="header__intro--text">
                     <p>
-                        I am a CS Freshie from NIT Durgapur, expected to finish course in 2024. Currently a beginner coder on HackerRank, CodeForces and CodeChef doing Competitive Programming.
+                        I am a CS Freshie from NIT Durgapur, expected to finish course in 2024. Currently a beginner coder on HackerRank, CodeForces and CodeChef doing <a href="https://www.stopstalk.com/user/profile/goofyNugtz">Competitive Programming.</a>
                     </p>
                 </div>
                 <button class="header__intro--button">Contact Me</button>
@@ -65,6 +65,7 @@
                 <br>
                 <span class="back-end skills">Back End</span>
                 <span class="back-end skills back-end--nodejs">NodeJS</span>
+                <span class="back-end skills back-end--express">Express</span>
                 <span class="back-end skills back-end--sql">SQL</span>
                 <span class="back-end skills back-end--mongodb">MongoDB</span>
                 <br>
