Responsiveness optimized for Tablets and Mobile devices

--- a/homepage.html
+++ b/homepage.html
@@ -78,6 +78,10 @@
                 <span class="extras-2 skills extras-2--svg">Vector Graphics</span>
             </div>
         </div>
+
+        <div class="blog">
+            Blog
+        </div>
     </div>
 </body>
 </html>
